# G14Projects

./: .cproject  .gitignore  CMakeLists.txt  Makefile  README.md  generate_test_file.py
src/: Client.h  FileManager.cpp  FileManager.h  Gremlin.cpp  Gremlin.h  Project1.cpp  Project2.cpp  Server.h  Sockets.cpp  Sockets.h  packets.cpp  packets.h  project.h
src/side/: Client.h  Server.h
